# seraphine-music

./: .gitignore  CLAUDE.md  CODING_STANDARDS.md  CONTEXT.md  LICENSE  README.md  desktop-mini.html  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  main.yml
docs/adr/: 0001-multi-window-data-isolation.md  0002-multi-window-bridge-pattern.md  _TEMPLATE.md
docs/agents/: _TEMPLATE.md  domain.md  issue-tracker.md  triage-labels.md
docs/specs/: _TEMPLATE.md  desktop-lyric.md  desktop-mini.md  multi-window-bridge-pattern.md
src/: desktop-lyric.ts  desktop-mini.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-lyric.json  desktop-mini.json
src-tauri/src/: lib.rs
src-tauri/src/http/: client.rs
src-tauri/src/music/: player.rs
src/components/: ContextMenu.vue  Image.vue  SystemActions.vue  VirtualList.vue
src/components/MusicList/: Card.vue
src/components/MusicTable/: MusicTable.vue
src/components/MusicTable/Actions/Add/: AddModal.vue
src/composables/: useDesktopLyricBridge.ts  useDesktopMiniBridge.ts
src/composables/__tests__/: useDesktopLyricBridge.spec.ts
src/layout/Aside/: Aside.vue  UserPlaylist.vue
src/layout/Header/Login/: Login.vue
src/layout/LyricPage/: BgMode.vue  LyricPage.vue  LyricScrollList.vue  LyricSearchModal.vue
src/layout/LyricPage/Actions/: AlignBtn.vue  ColorBtn.vue  FontFamilyBtn.vue  FontSizeBtn.vue  OffsetBtn.vue  TransBtn.vue
src/layout/Playbar/: DesktopLyric.vue  PlayList.vue  Playbar.vue  Quality.vue
src/router/: index.ts
src/stores/: context-menu.ts  contextMenu.ts  desktop-lyric.ts  list.ts  lyric.ts  music.ts  setting.ts  user.ts
src/styles/: global.css
src/types/: global.d.ts
src/utils/: params.ts  tools.ts
src/views/: DesktopLyric.vue  DesktopMini.vue
src/views/Search/: Search.vue
