[package]
name = "seraphine-music"
version = "0.1.0"
description = "音乐播放器"
authors = ["buren_lee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seraphine_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = { version = "2", features = [] }
tauri-plugin-global-shortcut = { version = "2", features = [] }
tauri-plugin-single-instance = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
# tauri = { version = "2", features = [
#   "tray-icon",
#   "protocol-asset",
#   "devtools",
# ] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-store = { version = "2", features = [] }
tauri-plugin-clipboard-manager = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = [
  "cookies",
  "gzip",
  "json",
  "stream",
] }
aes = "0.8"
base64 = "0.22"
cbc = { version = "0.1", features = ["block-padding", "alloc"] }
hex = "0.4"
md-5 = "0.11"
rsa = { version = "0.9", features = ["hazmat"] }
sha1 = "0.11"
uuid = { version = "1.23", features = ["v4"] }
crossbeam-channel = "0.5"
rayon = "1.11"
tokio = "1.51"
tokio-stream = "0.1"
flate2 = "1.1"
lofty = "0.24"
rodio = { version = "0.22", features = ["crossbeam-channel"] }
rand = "0.10"
serde = "1.0"
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.11"
chrono = "0.4"

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。
